<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity" >
    
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        android:padding="5dp"
        />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/ticker"
        >
        <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@android:drawable/ic_menu_today"
            style="@style/IgRedButtonStyle"
            android:onClick="onTimeTable"
            android:textSize="18sp"
            android:text="@string/timetable"
            />
        <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            style="@style/IgRedButtonStyle"
            android:drawableLeft="@android:drawable/ic_menu_help"
            android:layout_marginLeft="5dp"
            android:onClick="onPostQuery"
            android:layout_marginRight="10dp"
            android:text="@string/postquery"
            />
    </LinearLayout>
    <TextView
        android:id="@id/ticker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:marqueeRepeatLimit="marquee_forever"
        android:ellipsize="marquee"
        android:layout_margin="7dp"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
         />
</RelativeLayout>
