<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E4E2"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/headercourse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/hd_course"
        android:textSize="18sp"
        android:textStyle="bold" />
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout 
            android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
            >
        
       <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_card"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="2" >

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="left|bottom"
                            android:layout_weight="1"
                            android:id="@+id/course"
                            android:text="@string/course"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spin_course"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="fill"
                            android:minWidth="200dp"
                            android:spinnerMode="dropdown"
                            android:layout_weight="1"
                            android:gravity="right|bottom"
                            android:textSize="20sp"
                            android:singleLine="true" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="left|bottom"
                            android:layout_weight="1"
                            android:id="@+id/batch"
                            android:text="@string/batch"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spin_batch"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="fill"
                            android:layout_weight="1"
                            android:minWidth="200dp"
                            android:spinnerMode="dropdown"
                            android:gravity="right|bottom"
                            android:singleLine="true" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
       		<TextView 
       		    android:id="@+id/defaulttext"
       		    android:layout_width="fill_parent"
       		    android:layout_height="wrap_content"
       		    android:layout_gravity="center"
       		    android:gravity="left|bottom"
       		    android:text="Default"
       		    android:visibility="gone"
       		    android:background="#C0C0C0"
       		    />     
            </LinearLayout>
</ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/go"
            style="@style/IgRedButtonStyleLarge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@android:drawable/ic_menu_set_as"
            android:padding="5dp"
            android:text="@string/go"
            android:onClick="onGo"
            android:textSize="20sp" />

        <LinearLayout 
            android:layout_above="@id/go"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card"
            android:orientation="horizontal"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onSetDefault"
            >
            <CheckBox
            android:id="@+id/set_default"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_checkbox"
            android:layout_weight="0.7"
            android:text=""
             />
            <TextView 
                android:id="@+id/txtsetdefault"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setasdefault"
                android:layout_weight="0.3"
                android:textSize="20sp"
                />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>