<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
     >
     
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/hd_course"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        />
    
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rectangle_course"
        >

        <Spinner 
            android:id="@+id/spin_course"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/select_spinner"
            />
        
        <Spinner 
            android:id="@+id/spin_city"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/select_spinner"
            />
        <Spinner 
            android:id="@+id/spin_batch"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/select_spinner"
            />
        <Spinner 
            android:id="@+id/spin_sub"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:background="@drawable/select_spinner"
            />
    </LinearLayout>

    <CheckBox
        android:id="@+id/set_default"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  
        android:text="@string/setasdefault"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:layout_marginTop="7dp"
    	android:button="@drawable/selector_checkbox" />
    
    <Button 
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="5dp"
        android:drawableLeft="@android:drawable/ic_menu_set_as"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        style="@style/IgGreenButtonStyleLarge"
        android:text="@string/go"
        android:layout_alignParentRight="true"
        />
    </LinearLayout>
</ScrollView>
</LinearLayout>